--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,76 +1,271 @@
-
-#sec_1{
-    background-image: url("../images/web-host.jpg");
-    background-repeat: no-repeat;
-    background-size:cover;
-   background-position-x: center;
-   background-position-y: center;
-     width: 100%;
-    min-height: 500px;
+* {
+    box-sizing: border-box;
 }
 
+#sec_1 {
+    margin-bottom: 200px;
+}
+
+.home
+{
+	width: 100%;
+	height: 580px;
+}
+
+.background_city{background-image:url(../images/city2.png);height:550px;}.home_background
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height:600px;
+    z-index: 1;
+}
+
+.background_image
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+}
+
+.background_city
+{
+	z-index: 3;
+}
+.cloud
+{
+	position: absolute;
+	width: 138px;
+	height: 57px;
+	z-index: 4;
+}
+.cloud img
+{
+	max-width: 100%;
+}
+.cloud_1
+{
+	top: 147px;
+	left: -138px;
+	-webkit-animation: cloud_anim 60s -39s linear infinite;
+	animation: cloud_anim 60s -39s linear infinite;
+}
+.cloud_2
+{
+	top: 204px;
+	left: -138px;
+	-webkit-animation: cloud_anim 60s -6s linear infinite;
+	animation: cloud_anim 60s -6s linear infinite;
+    color: lightgray;
+}
+.cloud_3
+{
+	top: 332px;
+	left: -138px;
+	-webkit-animation: cloud_anim 60s -45s linear infinite;
+	animation: cloud_anim 60s -45s linear infinite;
+}
+.cloud_4
+{
+	top: 353px;
+	left: -138px;
+	-webkit-animation: cloud_anim 60s -15s linear infinite;
+	animation: cloud_anim 60s -15s linear infinite;
+	
+}
+@-webkit-keyframes cloud_anim
+{
+	0%
+	{
+		left: -138px;
+	}
+	100%
+	{
+		left: calc(100vw + 138px);
+	}
+}
+@keyframes cloud_anim
+{
+	0%
+	{
+		left: -138px;
+	}
+	100%
+	{
+		left: calc(100vw + 138px);
+	}
+}
+.home_container
+{
+	position: absolute;
+	left: 0;
+	top: 17.9%;
+	width: 100%;
+	z-index: 5;
+}
+
+
+
+.home_title
+{float:right;
+	font-size: 30px;width:65%;
+	font-weight: 600;
+	color: #FFFFFF;
+	line-height: 1.2;
+}
+.home_text
+{direction:rtl;
+	width:70%;
+	font-size: 14px;
+	color: #FFFFFF;
+	line-height: 2.14;
+	float:right;
+	text-align:right;
+	margin-top: 9px;
+}
+
+.signup_button
+{
+	width: 166px;
+	height: 60px;
+	background: #fff;
+    margin-top: 100px;
+	border-radius: 12px;
+	border: none;
+	outline: none;
+	padding:7px 22px;
+	margin:0 6px;
+	cursor: pointer;
+	font-size: 24px;
+	font-weight: 600;
+	color: #64d8d7!important;
+}
+.signup_button img
+{
+	margin-right: 10px;
+}
+.signup_button:hover
+{
+	background: #FFFFFF;
+}
+
+
+/* ---------------------------------------------------------------------------------------------- */
+
 #sec_2 {
-    margin-top: 5%;
+    z-index: 5;
     width: 90%;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
-#icons-container{
-    /* background-color: blue; */
-    /* display: flex;
-    flex-wrap: wrap; */
+#sec_2 h1 {
+    text-align: center;
+    margin-bottom: 5%;
+}
 
+.icons_container {
     display: flex;
-     flex-direction: row; 
-  
-     justify-content: space-between;
-    align-items: center; 
-
+    justify-content: space-between;
+    grid-gap: 0.5 rem;
+    gap: 0.5 rem;
+    flex-wrap: wrap;
 }
-.icon{
+
+.icon {
     margin: 2%;
+    max-width: 400px;
+    flex: 50%;
 }
 
-.icon img {
-display: block;
-    width: 50%;
-    height: 50%;
+.icon-light {
+    background-color: lightgray;
+    width: 180px;
+    height: 180px;
+    position: relative;
+    border-radius: 50%;
     margin-left: auto;
     margin-right: auto;
 }
 
-.icon p{
+.icon-light:hover {
+    transform: scale(1.1);
+}
+
+.icon-grey {
+    background-color: grey;
+    top: 10%;
+    left: 10%;
+    width: 80%;
+    height: 80%;
+    position: relative;
+    border-radius: 50%;
+    background-color: gray;
+}
+
+.icon img {
+    position: relative;
+    top: 20%;
+    left: 20%;
+    width: 60%;
+    height: 60%;
+}
+
+.icon h3 {
+    text-align: center;
+    width: 100%;
+    margin-top: 3%;
+}
+
+.icon p {
     font-size: large;
+    width: 100%;
     margin-top: 5%;
     font-weight: 550;
 }
 
+/* ---------------------------------------------------------------------------------------------- */
+
 #sec_3 {
-    margin-top: 5%;
+   
     width: 90%;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
+#sec_3 h1 {
+    text-align: center;
+    margin-bottom: 5%;
+}
 
-#plans-container{
+#plans-container {
     display: flex;
-    flex-direction: row; 
- 
     justify-content: space-between;
-   align-items: center; 
-   margin-bottom: 10%;
+    grid-gap: 0.5 rem;
+    gap: 0.5 rem;
+    flex-wrap: wrap;
+    margin-bottom: 10%;
 }
 
 .plan {
-    width: 30%;
+    width: 400px;
     border-radius: 15px;
-    border : black solid 1px
+    border: black solid 1px
 }
-
+.plan:hover {
+    background-color: lightgray;
+}
+.plan a {
+    text-decoration: none;
+}
 .plan h2 {
     text-align: center;
     font-weight: bolder;
@@ -82,16 +277,14 @@ display: block;
     font-size: larger;
     text-align: center;
     margin-bottom: 10%;
-
 }
 
 #price {
     font-size: xx-large;
     margin-left: 2%;
-font-weight: bolder;
-text-align: center;
-margin-bottom: 10%;
-
+    font-weight: bolder;
+    text-align: center;
+    margin-bottom: 10%;
 }
 
 .plan button {
@@ -99,18 +292,22 @@ margin-bottom: 10%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10%;
-
 }
 
 .plan ul {
     margin-top: 15%;
     margin-bottom: 5%;
     list-style: none;
-    
 }
 
 .plan ul li {
     margin: 5%;
     font-size: larger;
     font-weight: 550;
+}
+
+footer {
+    width: 100%;
+    min-height: 300px;
+    background-image: -webkit-linear-gradient( 0deg, #005485 0%, #026ba8 25%, #757575 75%, #5c5c5c 100%);
 }
