--- a/CSS/home.css
+++ b/CSS/home.css
@@ -6,155 +6,148 @@
     margin-bottom: 200px;
 }
 
-.home
-{
-	width: 100%;
-	height: 580px;
+.home {
+    width: 100%;
+    height: 580px;
 }
 
-.background_city{background-image:url(../images/city2.png);height:550px;}.home_background
-{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height:600px;
+.background_city {
+    background-image: url(../images/slider-1.png);
+    height: 550px;
+}
+
+.home_background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 600px;
     z-index: 1;
 }
 
-.background_image
-{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center center;
+.background_image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
 
-.background_city
-{
-	z-index: 3;
+.background_city {
+    z-index: 3;
 }
-.cloud
-{
-	position: absolute;
-	width: 138px;
-	height: 57px;
-	z-index: 4;
+
+.cloud {
+    position: absolute;
+    width: 138px;
+    height: 57px;
+    z-index: 4;
 }
-.cloud img
-{
-	max-width: 100%;
+
+.cloud img {
+    max-width: 100%;
 }
-.cloud_1
-{
-	top: 147px;
-	left: -138px;
-	-webkit-animation: cloud_anim 60s -39s linear infinite;
-	animation: cloud_anim 60s -39s linear infinite;
+
+.cloud_1 {
+    top: 147px;
+    left: -138px;
+    -webkit-animation: cloud_anim 60s -39s linear infinite;
+    animation: cloud_anim 60s -39s linear infinite;
 }
-.cloud_2
-{
-	top: 204px;
-	left: -138px;
-	-webkit-animation: cloud_anim 60s -6s linear infinite;
-	animation: cloud_anim 60s -6s linear infinite;
+
+.cloud_2 {
+    top: 204px;
+    left: -138px;
+    -webkit-animation: cloud_anim 60s -6s linear infinite;
+    animation: cloud_anim 60s -6s linear infinite;
     color: lightgray;
 }
-.cloud_3
-{
-	top: 332px;
-	left: -138px;
-	-webkit-animation: cloud_anim 60s -45s linear infinite;
-	animation: cloud_anim 60s -45s linear infinite;
-}
-.cloud_4
-{
-	top: 353px;
-	left: -138px;
-	-webkit-animation: cloud_anim 60s -15s linear infinite;
-	animation: cloud_anim 60s -15s linear infinite;
-	
-}
-@-webkit-keyframes cloud_anim
-{
-	0%
-	{
-		left: -138px;
-	}
-	100%
-	{
-		left: calc(100vw + 138px);
-	}
-}
-@keyframes cloud_anim
-{
-	0%
-	{
-		left: -138px;
-	}
-	100%
-	{
-		left: calc(100vw + 138px);
-	}
-}
-.home_container
-{
-	position: absolute;
-	left: 0;
-	top: 17.9%;
-	width: 100%;
-	z-index: 5;
+
+.cloud_3 {
+    top: 332px;
+    left: -138px;
+    -webkit-animation: cloud_anim 60s -45s linear infinite;
+    animation: cloud_anim 60s -45s linear infinite;
 }
 
-
-
-.home_title
-{float:right;
-	font-size: 30px;width:65%;
-	font-weight: 600;
-	color: #FFFFFF;
-	line-height: 1.2;
-}
-.home_text
-{direction:rtl;
-	width:70%;
-	font-size: 14px;
-	color: #FFFFFF;
-	line-height: 2.14;
-	float:right;
-	text-align:right;
-	margin-top: 9px;
+.cloud_4 {
+    top: 353px;
+    left: -138px;
+    -webkit-animation: cloud_anim 60s -15s linear infinite;
+    animation: cloud_anim 60s -15s linear infinite;
 }
 
-.signup_button
-{
-	width: 166px;
-	height: 60px;
-	background: #fff;
-    margin-top: 100px;
-	border-radius: 12px;
-	border: none;
-	outline: none;
-	padding:7px 22px;
-	margin:0 6px;
-	cursor: pointer;
-	font-size: 24px;
-	font-weight: 600;
-	color: #64d8d7!important;
-}
-.signup_button img
-{
-	margin-right: 10px;
-}
-.signup_button:hover
-{
-	background: #FFFFFF;
+@-webkit-keyframes cloud_anim {
+    0% {
+        left: -138px;
+    }
+    100% {
+        left: calc(100vw + 138px);
+    }
 }
 
+@keyframes cloud_anim {
+    0% {
+        left: -138px;
+    }
+    100% {
+        left: calc(100vw + 138px);
+    }
+}
+
+.home_container {
+    position: absolute;
+    left: 0%;
+    top: 35%;
+    width: 50%;
+    z-index: 5;
+}
+
+.home_title {
+    font-size: 30px;
+    width: 100%;
+    font-weight: 600;
+    color: #FFFFFF;
+    line-height: 1.2;
+   
+}
+
+.home_text {
+    width: 70%;
+    font-size: 14px;
+    color: #FFFFFF;
+    line-height: 2.14;
+    margin-top: 9px;
+}
+
+.signup_button {
+    position: absolute;
+    width: 166px;
+    height: 60px;
+    background: #fff;
+top: 100%;
+left: 70%;
+    border-radius: 12px;
+    border: none;
+    outline: none;
+    padding: 7px 22px;
+    margin: 0 6px;
+    cursor: pointer;
+    font-size: 24px;
+    font-weight: 600;
+    color: #64d8d7!important;
+}
+
+.signup_button img {
+    margin-right: 10px;
+}
+
+.signup_button:hover {
+    background: #FFFFFF;
+}
 
 /* ---------------------------------------------------------------------------------------------- */
 
@@ -234,7 +227,6 @@
 /* ---------------------------------------------------------------------------------------------- */
 
 #sec_3 {
-   
     width: 90%;
     display: block;
     margin-left: auto;
@@ -260,12 +252,15 @@
     border-radius: 15px;
     border: black solid 1px
 }
+
 .plan:hover {
-    background-color: lightgray;
+    background-color: rgb(241, 241, 241);
 }
+
 .plan a {
     text-decoration: none;
 }
+
 .plan h2 {
     text-align: center;
     font-weight: bolder;
@@ -309,5 +304,6 @@
 footer {
     width: 100%;
     min-height: 300px;
-    background-image: -webkit-linear-gradient( 0deg, #005485 0%, #026ba8 25%, #757575 75%, #5c5c5c 100%);
+    background-color: #007bff;
+    /* background-image: -webkit-linear-gradient( 0deg, #005485 0%, #026ba8 25%, #757575 75%, #5c5c5c 100%); */
 }
