--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,41 +21,38 @@ header nav {
     background-color: white;
     height: fit-content;
     top: 10%;
-  
-    width: 80%;
+ 
+    width: 100%;
     height: 80%;
     position: relative;
 }
 
-#nav-navbar-nav {
-    width: 70%;
-    margin-left: 10%;
 
+.navbar-nav {
+    width: 100%;
 }
 
-#nav-navbar-nav li {
-    margin-left: 5%;
+.navbar-brand img {
+    width: 100px;
+    height: 80px;
 }
 
-
-/* ---------------------------------------------------- */
-
-/* This is for signin and signup forms  */
-
-.signin-form {
-    display: block;
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
+#collapsibleNavbar
+{
+    position: relative;
+    left: 10%;
 }
 
-.mb-3{
-    margin-bottom: 5%;
+ .nav-item {
+   margin-left: 5%;
+}
+#link:hover
+ {
+    color: #007bff;
+    transform: scale(1.1);
 }
 
-#emailHelp{
-    color: gray;
-}
-
-/* ---------------------------------------------------- */
-
+/* #link.active {
+    color: #007bff;
+    transform: scale(1.1);
+} */
