--- a/CSS/home.css
+++ b/CSS/home.css
@@ -112,7 +112,6 @@
     font-weight: 600;
     color: #FFFFFF;
     line-height: 1.2;
-   
 }
 
 .home_text {
@@ -128,8 +127,8 @@
     width: 166px;
     height: 60px;
     background: #fff;
-top: 100%;
-left: 70%;
+    top: 100%;
+    left: 70%;
     border-radius: 12px;
     border: none;
     outline: none;
@@ -227,10 +226,18 @@ left: 70%;
 /* ---------------------------------------------------------------------------------------------- */
 
 #sec_3 {
+    background-color: lightgray;
+    height: 750px;
+}
+ 
+#plans {
     width: 90%;
     display: block;
+  position: relative;
+  top: 5%;
     margin-left: auto;
     margin-right: auto;
+
 }
 
 #sec_3 h1 {
@@ -250,11 +257,16 @@ left: 70%;
 .plan {
     width: 400px;
     border-radius: 15px;
-    border: black solid 1px
+    /* border: black solid 1px; */
+    background-color: white;
+    
 }
 
 .plan:hover {
-    background-color: rgb(241, 241, 241);
+    border: #007bff solid 2px;
+    transform: scale(1.1);
+
+    
 }
 
 .plan a {
@@ -265,6 +277,11 @@ left: 70%;
     text-align: center;
     font-weight: bolder;
     margin-bottom: 10%;
+    margin-top: 3%;
+}
+
+.plan span:hover{
+color: #007bff;
 }
 
 #description {
